# musical-juggling

./: .gitignore  README.md  TODO.md  environment.yml  pyproject.toml
experimentations/: Untitled.ipynb  musical_automata.ipynb  musical_automata_back.ipynb  musical_automata_backwards.ipynb  musical_automata_backwards.md  musical_automata_forwards.ipynb  musical_automata_forwards.md  omnimusic.md  test_pulp.lp  test_pulp1.mps  test_pulp2.lp  test_pulp3.mps  unimusical_forwards_backwards_speed.ipynb  unimusical_forwards_backwards_speed.md
experimentations/MILP_problems/: Juggling - DLX - Binder.ipynb  MILP Solvers.ipynb  Untitled1.ipynb  debug.lp  information.txt  test_pulp1.lp  test_pulp3.lp
experimentations/random/: Untitled.ipynb
src/musicaljuggling/: __init__.py
src/musicaljuggling/DLX/: Makefile  dlx_m  dlx_m.hpp  dlxm.py
src/musicaljuggling/automata/: automata-multiplex.py  generic_automata.py  multiplex_siteswap.py  musical_siteswap.py  musical_siteswap2.py  musical_siteswap_backwards.py  musical_siteswap_forwards.py  old_automata.py  omnimusic.py  utils.py  vanilla_siteswap.py
src/musicaljuggling/simulator/: audio.py  interface.py  juggling_dlx_milp.py  latex_pprint.py  modele.py
tests/: Test_ipycanvas.ipynb
